--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "html2canvas": "^1.3.2",
     "next": "12.0.4",
     "react": "17.0.2",
     "react-dom": "17.0.2"
@@ -17,6 +18,7 @@
     "@types/react": "17.0.35",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.4",
-    "typescript": "4.5.2"
+    "typescript": "4.5.2",
+    "typescript-plugin-css-modules": "^3.4.0"
   }
 }
